<resources>
    <string name="app_name">MangaDigitalCollection</string>
    <string name="catchphrase">LIVE THE TRUE GOLDEN EXPERIENCE</string>
    <string name="prompt_email">Adresse email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="action_sign_in">Connexion"</string>
    <string name="action_register">S\'enregistrer</string>
    <string name="pl_Logo">Logo</string>
    <string name="main_new">Nouveautés</string>
    <string name="main_recommended">Recommandés</string>

    <string name="randomCatchphrase">Trying to reach  true hope ?</string>
    <string name="isMangaRandom">La référence est adapté en manga ?</string>
    <string name="isAnimeRandom">La référence est adapté en animé ?</string>
    <string name="Randomize">Tirer au sort</string>


    <string name="BottomBarRandom">Aléatoire</string>
    <string name="BottomBarProfil">Profil</string>
    <string name="BottomBarRecherche">Recherche</string>
    <string name="BottomBarAccueil">Accueil</string>

    <string name="searchCatchphrase">You\'re going to find the One Piece !</string>
    <string name="search">Rechercher</string>
    <string name="searchHint">Saisissez un nom</string>

    <string name="referenceName">Nom : </string>
    <string name="referenceOriginalName">Nom original : </string>
    <string name="referenceGenre">Genre : </string>

    <string name="referenceNbTome">Nombre de tomes : </string>
    <string name="referenceEditeur">Editeur : </string>

    <string name="referenceNbSaisons">Nombre de saisons  : </string>
    <string name="referenceNbEpisodesTotal">Nombre d\'épisodes : </string>
    <string name="referenceStudio">Studio : </string>

    <string name="commentaireCatchphrase">Hit that show with a comeback Senpai !</string>
    <string name="commentaireHintText">Entrez votre commentaire....</string>
    <string name="commentaireRating">Note :</string>
    <string name="commentairePost">Poster</string>
    <string name="referenceimage">ReferenceImage</string>
    <string name="disconnect">Déconnexion</string>
    <string name="themeSwitcher">Changer le thème</string>
    <string name="createList">Créer une liste</string>
    <string name="addToList">Ajouter à la liste</string>
    <string name="listes">LISTES</string>
    <string name="addComment">Ajouter un commentaire</string>
    <string name="commentaires">Commentaires</string>
</resources>