<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/RegisterErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:text="" />

        <EditText
            android:id="@+id/RegisterMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/prompt_email" />

        <EditText
            android:id="@+id/RegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:hint="@string/prompt_username"
            android:autofillHints="@string/prompt_username" />

        <EditText
            android:id="@+id/RegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:autofillHints="@string/prompt_password" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/action_register" />
    </LinearLayout>

</FrameLayout>